--- a/style.css
+++ b/style.css
@@ -37,7 +37,16 @@ body {
     margin-top: 10px;
   }
     .small-img {
-    width: 40%;
+    width: 60%;
     display: block;
     margin: 20px auto;
   }
+
+.scroll-gallery {
+  display: flex;
+  overflow-x: auto;
+  gap: 16px;
+  padding-bottom: 10px;
+  scroll-snap-type: x mandatory;
+  -webkit-overflow-scrolling: touch; /* 모바일 부드러운 스크롤 */
+}
