--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
     margin-top: 10px;
   }
     .small-img {
-    width: 60%;
+  height: 450px;
     display: block;
     margin: 20px auto;
   }
