--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
     margin-top: 10px;
   }
     .small-img {
-  height: 450px;
+    max-width: 50%;
     display: block;
     margin: 20px auto;
   }
